Implement UdINaturenService Client and Interface

--- a/FindShelter.Web/index.html
+++ b/FindShelter.Web/index.html
@@ -12,6 +12,7 @@
         <!-- Vendor Libs -->
         <script src="Scripts/angular.js"></script>
         <script src="Scripts/angular-route.js"></script>
+        <script src="Scripts/angular-sanitize.js"></script>
 
         <!-- App libs -->
         <script src="app/app.js"></script>
